# Growsseth-Board-Pre

./: .env  .gitignore  README.md  angular.json  package-lock.json  package.json
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: app.component.html  app.component.ts  app.routes.ts
src/app/components/: game.component.ts  menu.component.ts
src/app/components/creategame/: creategame.component.html  creategame.component.ts
src/app/components/joinrandom/: joinrandom.component.html  joinrandom.component.ts
src/app/components/lobby-room/: lobby-room.component.html  lobby-room.component.scss  lobby-room.component.spec.ts  lobby-room.component.ts
src/app/components/mainmenu/: mainmenu.component.html  mainmenu.component.spec.ts  mainmenu.component.ts
src/app/components/menu/: menu.component.html  menu.component.scss  menu.component.ts
src/app/components/options/: options.component.html  options.component.scss  options.component.ts
src/app/components/searchgame/: searchgame.component.html  searchgame.component.scss  searchgame.component.ts
src/app/components/templates/lobby-component/: lobby.component.html  lobby.component.scss  lobby.component.ts
src/app/components/templates/lobby-item/: lobby-item.component.html  lobby-item.component.scss  lobby-item.component.spec.ts  (+1 more)
src/app/css/: menu.component.scss
src/app/html/: game.component.html  menu.component.html
src/app/lobby-room/: lobby-room.component.html  lobby-room.component.ts
src/assets/models/book/: OurBook.gltf
(+6 files in other folders)
